# ProtobufParser

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: blank.yml  tests.yml
cmake/: ClangFormat.cmake  ClangTidy.cmake
console_utility/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  main.cpp
proto_buff_parser/: CMakeLists.txt  enum.cpp  enum.hpp  enum_field_type.cpp  enum_field_type.hpp  fake.cpp  field.cpp  field.hpp  field_type.hpp  file.cpp  file.hpp  message.cpp  message.hpp  message_field_type.cpp  message_field_type.hpp  package.cpp  package.hpp
proto_buff_parser/container/: fields_container.hpp  files_container.hpp  messages_container.hpp  packages_container.hpp  proto_buff_container.cpp  proto_buff_container.hpp
proto_buff_parser/iterator/: fields_iterator.hpp  files_iterator.hpp  messages_iterator.hpp  packages_iterator.hpp
proto_buff_parser/view/: file_view.cpp  file_view.hpp  messages_view.cpp  messages_view.hpp  package_view.cpp  package_view.hpp
protobuf_parser/: CMakeLists.txt  enum.cpp  enum.hpp  enum_field_type.cpp  enum_field_type.hpp  field.cpp  field.hpp  field_type.hpp  file.cpp  file.hpp  identifier.hpp  iterator.hpp  message.cpp  message.hpp  message_field_type.cpp  message_field_type.hpp  package.cpp  package.hpp  parse_element.cpp  parse_element.hpp  parse_exception.cpp  parse_exception.hpp  parser.cpp  parser.hpp  protobuf_parser.hpp  protobuf_storage.cpp  protobuf_storage.hpp  storage.cpp  storage.hpp  stub_multiple_error_collector.cpp  stub_multiple_error_collector.hpp
protobuf_parser/builders/: directory_builder.cpp  directory_builder.hpp  enum_builder.cpp  enum_builder.hpp  enum_field_type_builder.cpp  enum_field_type_builder.hpp  file_builder.cpp  file_builder.hpp  message_builder.cpp  message_builder.hpp  message_field_type_builder.cpp  message_field_type_builder.hpp  package_builder.cpp  package_builder.hpp  storage_builder.cpp  storage_builder.hpp
protobuf_parser/container/: fields_container.hpp  files_container.hpp  messages_container.hpp  packages_container.hpp  protobuf_container.cpp  protobuf_container.hpp
protobuf_parser/elements/: directory.cpp  directory.hpp  element.cpp  element.hpp  enum.cpp  enum.hpp  field.cpp  field.hpp  file.cpp  file.hpp  message.cpp  message.hpp  package.cpp  package.hpp
protobuf_parser/elements/fields/: builtin.cpp  builtin.hpp  builtin_field.cpp  builtin_field.hpp  enum_field.cpp  enum_field.hpp  field.cpp  field.hpp  map_field.cpp  map_field.hpp  message_field.cpp  message_field.hpp
protobuf_parser/iterator/: directory_iterator.cpp  directory_iterator.hpp  fields_iterator.hpp  files_iterator.hpp  messages_iterator.hpp  package_iterator.cpp  package_iterator.hpp  packages_iterator.hpp
protobuf_parser/parse_elements/: directory.cpp  directory.hpp  enum.hpp  field.cpp  field.hpp  file.cpp  file.hpp  message.cpp  message.hpp  package.cpp  package.hpp
protobuf_parser/parsed_elements/: directory.cpp  field.cpp  field.hpp  file.cpp  file.hpp  message.cpp  message.hpp  package.cpp  package.hpp
protobuf_parser/serializers/: json_serializer.cpp  json_serializer.hpp  serializer.cpp  serializer.hpp
protobuf_parser/view/: file_view.cpp  file_view.hpp  messages_view.cpp  messages_view.hpp  package_view.cpp  package_view.hpp  view.cpp  view.hpp
tests/: CMakeLists.txt  directory_tests.cpp  field_tests.cpp  file_tests.cpp  google_test_check.cpp  message_tests.cpp  package_tests.cpp  parser_tests.cpp  protobuf_parser_tests.cpp  protobuf_storage_tests.cpp  storage_tests.cpp  view_tests.cpp
tests/builders/: directory_builder_tests.cpp  enum_builder_tests.cpp  file_builder_tests.cpp  message_builder_tests.cpp  package_builder_tests.cpp  storage_builder_tests.cpp
tests/container/: files_container_tests.cpp
tests/iterator/: directory_iterator_tests.cpp  package_iterator_tests.cpp
tests/protos/: TestProtoFile_1.proto
tests/protos/inner_directory/: TestProtoFile_2.proto  TestProtoFile_3.proto
tests/protos_with_errors/: ProtoWithError.proto
tests/util/: mock_multiple_error_collector.cpp  mock_multiple_error_collector.hpp  test_serializer.hpp
tests/util/container/: test_fields_container.hpp
